--- a/code/public/stylesheets/login-style.css
+++ b/code/public/stylesheets/login-style.css
@@ -1,4 +1,4 @@
-.login-box{
+.box{
     height: 500px;
     background-image: url("/images/tennis_court.jpg");
     background-position: center;
@@ -10,84 +10,48 @@
     flex-direction: column;
 }
 
-.login-box h2 {
-    color: white;
-    font-size: 60px;
-  }
-
-.selection-box{
-    margin-top: 20px;
-    display: inline-block;
-    background-color: rgba(255, 255, 255, 0.4);
+.login-box {
+    background-color: white;
     padding: 10px;
     border-radius: 10px;
 }
 
-.btn-return-account{
-    background-color: #5BC0DE;
-    padding: 20px 25px;
+.btn-login-selector {
     border: none;
-    color: white;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     cursor: pointer;
     font-size: 17px;
     transition: 0.3s;
+    background-color: transparent;
+    width: 200px;
+    margin-bottom: 20px;
 }
 
-.btn-new-account{
-    background-color: #5BC0DE;
-    padding: 20px 25px;
-    border: none;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    cursor: pointer;
-    font-size: 17px;
-    transition: 0.3s;
+.selector-active {
+    border-bottom: 4px solid #5BC0DE;
 }
 
-.btn-login-enter{
+.section-disable {
+    display: none;
+}
+
+input, select {
+    display: block;
     width: 100%;
-    margin-top: 10px;
-    background-color: #5BC0DE;
-    padding: 20px 25px;
+    padding: 10px 15px;
+}
+
+.submit-btn {
+    margin-top: 15px;
     border: none;
+    background-color: #5BC0DE;
     color: white;
     font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
     cursor: pointer;
-    font-size: 17px;
     transition: 0.3s;
 }
 
-.input-username{
-    width: 100%;
-    padding: 10px;
-}
-
-.new-account-box{
-    margin-top: 10px;
-}
-
-.return-account.box{
-    margin-top: 10px; 
-}
-
-.input-account-details{
-    width: 70%;
-    padding: 10px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.login-box label{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    font-size: 17px;
-}
-
-.section-input{
-    display: flex;
-    align-items: center;
+.submit-btn:hover {
+    opacity: 0.6;
 }
