--- a/code/public/stylesheets/style.css
+++ b/code/public/stylesheets/style.css
@@ -69,7 +69,7 @@ header {
   border-radius: 10px;
 }
 
-.form-search-event select, input[type=date] {
+.form-search-event select, .form-search-event input[type=date] {
   padding: 20px 25px;
   width: 200px;
   border: none;
