--- a/code/public/stylesheets/style.css
+++ b/code/public/stylesheets/style.css
@@ -42,6 +42,17 @@ header {
   border: 2px solid white;
 }
 
+.boxUser {
+  display: none;
+  color: white;
+  align-items: center;
+  font-size: 20px;
+}
+
+#username {
+  margin-right: 10px;
+}
+
 /* MAIN */
 
 #error {
