--- a/code/public/stylesheets/style.css
+++ b/code/public/stylesheets/style.css
@@ -47,6 +47,15 @@ header {
   color: white;
   align-items: center;
   font-size: 20px;
+  margin-right: 15px;
+  border-radius: 100px;
+  transition: 0.3s;
+  padding: 10px 15px;
+}
+
+.boxUser:hover {
+  background-color: white;
+  color: #5BC0DE;
 }
 
 #username {
