--- a/code/public/stylesheets/usermenu.css
+++ b/code/public/stylesheets/usermenu.css
@@ -17,7 +17,7 @@
     background-color: rgb(105, 14, 224);
     border-radius: 10px;
     width: 100%;
-    padding: 60px 0px 100px 0px;
+    padding: 40px 0px 40px 0px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -88,4 +88,33 @@
     display: flex;
     width: 100%;
     margin-top: 15px;
+  }
+
+  .line3{
+    display: flex;
+    width: 100%;
+    margin-top: 15px;
+  }
+
+  .logoutBox{
+    background-color:red;
+    color: black;
+    border-radius: 10px;
+    padding: 40px 0px 40px 0px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .logoutBox h1{
+    color: black;
+    font-size: 35px;
+    padding-bottom: 10px;
+  }
+
+  .logoutBox h3{
+    color: black;
+    font-size: 15px;
   }
