--- a/code/public/stylesheets/usermenu.css
+++ b/code/public/stylesheets/usermenu.css
@@ -30,7 +30,7 @@
   }
 
   .nextevent-box{
-    background-color: rgb(105, 14, 224);
+    background-color: blue;
     border-radius: 10px;
     width: 100%;
     padding: 40px 0px 40px 0px;
