--- a/code/public/stylesheets/style.css
+++ b/code/public/stylesheets/style.css
@@ -51,6 +51,7 @@ header {
   border-radius: 100px;
   transition: 0.3s;
   padding: 10px 15px;
+  cursor: pointer;
 }
 
 .boxUser:hover {
@@ -199,34 +200,14 @@ footer section img {
   width: 300px;
 }
 
-/*DROPDOWN BUTTON*/
-
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
+/* DROPDOWN */
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  overflow: auto;
+  background-color: #f9f9f9;
+  min-width: 154px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
 }
 
 .dropdown-content a {
@@ -236,6 +217,8 @@ footer section img {
   display: block;
 }
 
-.dropdown a:hover {background-color: #ddd;}
+.dropdown-content a:hover {background-color: #f1f1f1}
 
-.show {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
