--- a/code/public/stylesheets/addevent-style.css
+++ b/code/public/stylesheets/addevent-style.css
@@ -78,6 +78,7 @@
     -moz-box-shadow: -2px 0px 18px 0px rgba(0,0,0,0.15);
     box-shadow: -2px 0px 18px 0px rgba(0,0,0,0.15);
     border-radius: 10px;
+    height: min-content;
   }
   
   .nav-links {
