--- a/code/public/stylesheets/myevents-style.css
+++ b/code/public/stylesheets/myevents-style.css
@@ -63,6 +63,7 @@ nav {
   -moz-box-shadow: -2px 0px 18px 0px rgba(0,0,0,0.15);
   box-shadow: -2px 0px 18px 0px rgba(0,0,0,0.15);
   border-radius: 10px;
+  height: min-content;
 }
 
 .nav-links {
