--- a/code/public/stylesheets/mapa.css
+++ b/code/public/stylesheets/mapa.css
@@ -42,8 +42,8 @@ body {
     border: 1px solid #888;
     border-radius: 10px;
     width: 60%;
-    display: flex;
     color: grey;
+    display: flex;
   }
 
   .close {
@@ -59,7 +59,7 @@ body {
   }
 
   td {
-      padding: 40px 100px 40px 0px;
+      padding: 40px 120px 40px 0px;
   }
 
   td h2{
@@ -79,6 +79,29 @@ body {
   }
 
 #map-event {
-    height: 100%;
-    width: 100%;
+    height: 600px;
+    width: 400px;
+    margin-top: 50px;
+}
+
+#event-name {
+  width: 100%;
+}
+
+.join-event-button {
+  background-color: #5BC0DE;
+  color: white;
+  text-align: center;
+  width: 30%;
+  padding: 15px 50px 15px 50px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+i {
+  font-size: 30px;
+}
+
+#event-name {
+  font-size: 50px;
 }
