calculate event route and attend event

--- a/code/public/stylesheets/mapa.css
+++ b/code/public/stylesheets/mapa.css
@@ -44,6 +44,14 @@ body {
     width: 60%;
     color: grey;
     display: flex;
+    flex-direction: column;
+  }
+
+  .header-modal {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 50%;
   }
 
   .close {
@@ -52,24 +60,6 @@ body {
     font-size: 28px;
     font-weight: bold;
   }
-
-  table {
-      margin-top: 40px;
-      width: 500px;
-  }
-
-  td {
-      padding: 40px 120px 40px 0px;
-  }
-
-  td h2{
-      color: grey;
-  }
-
-  td h3{
-    color: grey;
-    font-weight: 400;
-}
   
   .close:hover,
   .close:focus {
@@ -78,14 +68,43 @@ body {
     cursor: pointer;
   }
 
+  #event-name {
+    font-size: 40px;
+  }
+
+  .event {
+    display: flex;
+    margin-top: 15px;
+  }
+
+  .info-event td h3 {
+    font-size: 15px;
+    font-weight: 400;
+  }
+
+  .event-map {
+    width: 100%;
+    height: 100%;
+    margin-left: 30px;
+  }
+
 #map-event {
-    height: 600px;
-    width: 400px;
-    margin-top: 50px;
+    height: 400px;
+    width: 100%;
 }
 
-#event-name {
-  width: 100%;
+.event table td {
+  padding: 0 20px 30px 0;
+}
+
+.event table h2 {
+  color: gray;
+}
+
+.event table h3 {
+  color: gray;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .join-event-button {
@@ -96,12 +115,13 @@ body {
   padding: 15px 50px 15px 50px;
   border-radius: 10px;
   margin-top: 10px;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
+  transition: 0.3s;
 }
 
-i {
-  font-size: 30px;
-}
-
-#event-name {
-  font-size: 50px;
+.join-event-button:hover {
+  opacity: 0.3;
 }
