--- a/code/public/stylesheets/style.css
+++ b/code/public/stylesheets/style.css
@@ -205,6 +205,7 @@ footer section img {
 .dropdown-content {
   display: none;
   position: absolute;
+  z-index: 1000;
   background-color: #f9f9f9;
   min-width: 154px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
