--- a/code/public/stylesheets/myevents-style.css
+++ b/code/public/stylesheets/myevents-style.css
@@ -234,3 +234,93 @@ footer section img {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1000; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  width: 60%;
+  color: grey;
+  display: flex;
+  flex-direction: column;
+}
+
+.header-modal {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 50%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#modal-title {
+  font-size: 40px;
+}
+
+.event {
+  display: flex;
+  margin-top: 15px;
+  justify-content: center;
+}
+
+input, select, textarea {
+  padding: 10px;
+  border: 2px solid #707070;
+  border-radius: 10px;
+  width: 250px;
+  margin-bottom: 15px;
+}
+
+.btn-add-event {
+  background-color: #5BC0DE;
+  border-radius: 10px;
+  padding: 10px 15px;
+  color: white;
+  cursor: pointer;
+  width: 250px;
+  border: none;
+  transition: 0.3s;
+}
+
+.btn-add-event:hover {
+  opacity: 0.6;
+}
+
+.update-inputs {
+  display: flex;
+  flex-direction: column;
+}
+
+#box-whitelist {
+  display: none;
+}
