--- a/code/public/stylesheets/eventsattend-style.css
+++ b/code/public/stylesheets/eventsattend-style.css
@@ -178,6 +178,14 @@ main {
   border-radius: 5px;
 }
 
+.box-status-canceled {
+  background-color: crimson;
+}
+
+.box-status-complete {
+  background-color: lightgreen;
+}
+
 #error {
   display: none;
   justify-content: center;
